--- a/action.yml
+++ b/action.yml
@@ -133,6 +133,9 @@ outputs:
     release-url:
         description: 'URL of the created release'
         value: ${{ steps.create_release.outputs.url }}
+    dir-tree-path:
+        description: 'Path to the directory tree file'
+        value: ${{ steps.create_package.outputs.dir_tree_path }}
 
 runs:
     using: 'composite'
@@ -424,57 +427,124 @@ runs:
                 echo -e "$CHANGELOG_OUTPUT" >> $GITHUB_OUTPUT
                 echo "EOF" >> $GITHUB_OUTPUT
 
-        - name: Create package
-          id: create_package
-          shell: bash
-          run: |
-              EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
-              EXTENSION_XML="${{ steps.extension_details.outputs.extension_xml }}"
-              VERSION="${{ steps.set_version.outputs.version }}"
-              
-              if [ -n "$RUNNER_TEMP" ]; then
-                OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
-              else
-                OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
-              fi
-              rm -rf "$OUTER_BUILD_DIR"
-              mkdir -p "$OUTER_BUILD_DIR"
-              
-              EXCLUDES=(
-                --exclude='.git/'
-                --exclude='.github/'
-                --exclude='.DS_Store'
-                --exclude='Thumbs.db'
-                --exclude='node_modules/'
-                --exclude='.packagerignore'
-                --exclude='build/'
-                --exclude='package/'
-                --exclude='.gitignore'
-                --exclude='*.bak'
-                --exclude='*.zip'
-              )
-              if [ -f .packagerignore ]; then
-                while IFS= read -r line; do
-                  [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
-                  EXCLUDES+=(--exclude="$line")
-                done < .packagerignore
-              fi
-              
-              rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
-              
-              echo "External build/package directory contents:"
-              ls -la "$OUTER_BUILD_DIR"
-              
-              cd "$OUTER_BUILD_DIR"
-              zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
-              cd -
-              
-              if [ -n "${{ inputs.dir-tree-file }}" ]; then
-                if command -v tree &> /dev/null; then
-                  tree "$OUTER_BUILD_DIR" > "$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
+        -   name: Create package
+            id: create_package
+            shell: bash
+            run: |
+                EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
+                EXTENSION_XML="${{ steps.extension_details.outputs.extension_xml }}"
+                VERSION="${{ steps.set_version.outputs.version }}"
+
+                if [ -n "$RUNNER_TEMP" ]; then
+                  OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
                 else
-                  find "$OUTER_BUILD_DIR" -type f | sort > "$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
+                  OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
-              fi
-              
-              echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+                rm -rf "$OUTER_BUILD_DIR"
+                mkdir -p "$OUTER_BUILD_DIR"
+
+                EXCLUDES=(
+                  --exclude='.git/'
+                  --exclude='.github/'
+                  --exclude='.DS_Store'
+                  --exclude='Thumbs.db'
+                  --exclude='node_modules/'
+                  --exclude='.packagerignore'
+                  --exclude='build/'
+                  --exclude='package/'
+                  --exclude='.gitignore'
+                  --exclude='*.bak'
+                  --exclude='*.zip'
+                )
+                if [ -f .packagerignore ]; then
+                  while IFS= read -r line; do
+                    [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
+                    EXCLUDES+=(--exclude="$line")
+                  done < .packagerignore
+                fi
+
+                rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
+
+                echo "External build/package directory contents:"
+                ls -la "$OUTER_BUILD_DIR"
+
+                cd "$OUTER_BUILD_DIR"
+                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
+                cd -
+
+                if [ -n "${{ inputs.dir-tree-file }}" ]; then
+                  DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
+                  if command -v tree &> /dev/null; then
+                    tree "$OUTER_BUILD_DIR" > "$DIR_TREE_PATH"
+                  else
+                    find "$OUTER_BUILD_DIR" -type f | sort > "$DIR_TREE_PATH"
+                  fi
+                  echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
+                fi
+
+                echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+
+        -   name: Create GitHub Release
+            if: inputs.create-release == 'true'
+            id: create_release
+            uses: softprops/action-gh-release@v1
+            with:
+                tag_name: ${{ steps.set_version.outputs.version }}
+                name: ${{ steps.extension_details.outputs.extension_name }} ${{ steps.set_version.outputs.version }}
+                files: |
+                    ${{ steps.create_package.outputs.package_path }}
+                    ${{ steps.create_package.outputs.dir_tree_path }}
+                draft: false
+                prerelease: false
+                body: |
+                    ${{ steps.extension_details.outputs.extension_name }} ${{ steps.set_version.outputs.version }}
+                    
+                    ### Download Options:
+                    - Download directly from this release page
+                    - Access the artifact from the Actions tab of this workflow run
+                    
+                    ## Changelog
+                    ${{ steps.changelog.outputs.changelog }}
+                    
+                    [View full changelog](https://github.com/${{ github.repository }}/blob/main/${{ inputs.changelog-file }})
+            env:
+                GITHUB_TOKEN: ${{ inputs.github-token }}
+
+        -   name: Update Joomla update server XML
+            if: inputs.update-joomla-server == 'true'
+            shell: bash
+            run: |
+                EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
+                UPDATES_XML="${{ inputs.updates-xml-file }}"
+                if [ -f "$UPDATES_XML" ]; then
+                  cp "$UPDATES_XML" "${UPDATES_XML}.bak"
+                
+                  DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ steps.set_version.outputs.version }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+                
+                  # Update version
+                  sed -i "s|<version>.*</version>|<version>${{ steps.set_version.outputs.version }}</version>|g" "$UPDATES_XML"
+                
+                  # Update download URL
+                  sed -i "s|<downloadurl>.*</downloadurl>|<downloadurl>$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
+                
+                  echo "Updated $UPDATES_XML file with new version and download URL"
+                  cat "$UPDATES_XML"
+                else
+                  echo "::warning::${{ inputs.updates-xml-file }} file not found in repository"
+                fi
+
+        -   name: Upload to GitHub Artifacts
+            if: inputs.upload-artifact == 'true'
+            uses: actions/upload-artifact@v4
+            with:
+                name: ${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}
+                path: |
+                  ${{ steps.create_package.outputs.package_path }}
+                  ${{ steps.create_package.outputs.dir_tree_path }}
+                retention-days: 90
+                if-no-files-found: warn
+
+        -   name: Cleanup backup files
+            shell: bash
+            run: |
+                rm -f ${{ steps.extension_details.outputs.extension_xml }}.bak ${{ inputs.updates-xml-file }}.bak ${{ inputs.changelog-file }}.bak || true
