Refactor action to simplify package creation and remove file update functionality

--- a/action.yml
+++ b/action.yml
@@ -277,152 +277,72 @@ runs:
                 echo "creation_date=$CREATION_DATE" >> $GITHUB_OUTPUT
                 echo "current_year=$CURRENT_YEAR" >> $GITHUB_OUTPUT
 
-        -   name: Update XML file
-            if: inputs.file-updates == 'true'
+        -   name: Create package
+            id: create_package
             shell: bash
             run: |
-                XML_FILE="${{ steps.extension_details.outputs.extension_xml }}"
-                if [ -f "$XML_FILE" ]; then
-                  cp "$XML_FILE" "${XML_FILE}.bak"
-                
-                  # Update version
-                  sed -i "s|<version>.*</version>|<version>${{ steps.set_version.outputs.version }}</version>|g" "$XML_FILE"
-                
-                  # Update creation date
-                  sed -i "s|<creationDate>.*</creationDate>|<creationDate>${{ steps.set_version.outputs.creation_date }}</creationDate>|g" "$XML_FILE"
-                
-                  # Update copyright
-                  if [ "${{ steps.set_version.outputs.current_year }}" -gt "${{ inputs.copyright-start-year }}" ]; then
-                    sed -i "s|Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }}|Copyright (C) ${{ inputs.copyright-start-year }} - ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$XML_FILE"
-                  else
-                    sed -i "s|Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }}|Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$XML_FILE"
-                  fi
+                EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
+                EXTENSION_XML="${{ steps.extension_details.outputs.extension_xml }}"
+                VERSION="${{ steps.set_version.outputs.version }}"
+
+                if [ -n "$RUNNER_TEMP" ]; then
+                  OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
                 else
-                  echo "::error::XML file not found: $XML_FILE"
-                  exit 1
+                  OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
+                fi
+                rm -rf "$OUTER_BUILD_DIR"
+                mkdir -p "$OUTER_BUILD_DIR/package_root"
+
+                EXCLUDES=(
+                  --exclude='.git/'
+                  --exclude='.github/'
+                  --exclude='.DS_Store'
+                  --exclude='Thumbs.db'
+                  --exclude='node_modules/'
+                  --exclude='.packagerignore'
+                  --exclude='build/'
+                  --exclude='package/'
+                  --exclude='.gitignore'
+                  --exclude='*.bak'
+                  --exclude='*.zip'
+                )
+                if [ -f .packagerignore ]; then
+                  while IFS= read -r line; do
+                    [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
+                    EXCLUDES+=(--exclude="$line")
+                  done < .packagerignore
                 fi
 
-        -   name: Update PHP files
-            if: inputs.file-updates == 'true'
-            shell: bash
-            run: |
-                find . -name "*.php" | while read -r PHP_FILE; do
-                  if [ -f "$PHP_FILE" ]; then
-                    if grep -q "@version" "$PHP_FILE"; then
-                      sed -i -E "s|(@version[ ]+).*|\\1${{ steps.set_version.outputs.version }}|g" "$PHP_FILE"
-                      sed -i -E "s|(Version[ ]*:[ ]*).*|\\1${{ steps.set_version.outputs.version }}|g" "$PHP_FILE"
-                      sed -i -E "s|(\* Version:)[0-9]{4}\.[0-9]{2}\.[0-9]{2}|\\1${{ steps.set_version.outputs.version }}|g" "$PHP_FILE"
-                      sed -i "s|@copyright.*|@copyright Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$PHP_FILE"
-                    fi
-                  fi
-                done
+                rsync -a ./ "$OUTER_BUILD_DIR/package_root/" "${EXCLUDES[@]}"
 
-        -   name: Update language files
-            if: inputs.file-updates == 'true'
-            shell: bash
-            run: |
-                find . -name "*.ini" -o -name "*.sys.ini" | while read -r LANG_FILE; do
-                  if [ -f "$LANG_FILE" ]; then
-                    if [ "${{ steps.set_version.outputs.current_year }}" -gt "${{ inputs.copyright-start-year }}" ]; then
-                      sed -i "s|; Copyright (C) [0-9]\{4\} - [0-9]\{4\} ${{ inputs.copyright-holder }}|; Copyright (C) ${{ inputs.copyright-start-year }} - ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$LANG_FILE"
-                      sed -i "s|; Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }}|; Copyright (C) ${{ inputs.copyright-start-year }} - ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$LANG_FILE"
-                    else
-                      sed -i "s|; Copyright (C) [0-9]\{4\} - [0-9]\{4\} ${{ inputs.copyright-holder }}|; Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$LANG_FILE"
-                      sed -i "s|; Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }}|; Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$LANG_FILE"
-                    fi
-                  fi
-                done
+                echo "External build/package directory contents:"
+                ls -la "$OUTER_BUILD_DIR/package_root"
 
-        -   name: Update CSS files
-            if: inputs.file-updates == 'true'
-            shell: bash
-            run: |
-                find . -name "*.css" | while read -r CSS_FILE; do
-                  if [ -f "$CSS_FILE" ]; then
-                    if grep -q "Copyright (C)" "$CSS_FILE"; then
-                      if [ "${{ steps.set_version.outputs.current_year }}" -gt "${{ inputs.copyright-start-year }}" ]; then
-                        sed -i "s|/\* Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }} \*/|/* Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }} */|g" "$CSS_FILE"
-                        sed -i "s|/\* Copyright (C) [0-9]\{4\} - [0-9]\{4\} ${{ inputs.copyright-holder }} \*/|/* Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }} */|g" "$CSS_FILE"
-                        sed -i "s| \* Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }}| * Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$CSS_FILE"
-                        sed -i "s| \* Copyright (C) [0-9]\{4\} - [0-9]\{4\} ${{ inputs.copyright-holder }}| * Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$CSS_FILE"
-                      else
-                        sed -i "s|/\* Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }} \*/|/* Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }} */|g" "$CSS_FILE"
-                        sed -i "s|/\* Copyright (C) [0-9]\{4\} - [0-9]\{4\} ${{ inputs.copyright-holder }} \*/|/* Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }} */|g" "$CSS_FILE"
-                        sed -i "s| \* Copyright (C) [0-9]\{4\} ${{ inputs.copyright-holder }}| * Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$CSS_FILE"
-                        sed -i "s| \* Copyright (C) [0-9]\{4\} - [0-9]\{4\} ${{ inputs.copyright-holder }}| * Copyright (C) ${{ steps.set_version.outputs.current_year }} ${{ inputs.copyright-holder }}|g" "$CSS_FILE"
-                      fi
-                    fi
-                
-                    if grep -q "\* Version:[0-9]\{4\}\.[0-9]\{2\}\.[0-9]\{2\}" "$CSS_FILE"; then
-                      sed -i -E "s|(\* Version:)[0-9]{4}\.[0-9]{2}\.[0-9]{2}|\\1${{ steps.set_version.outputs.version }}|g" "$CSS_FILE"
-                    fi
-                  fi
-                done
-
-        -   name: Generate changelog
-            if: inputs.generate-changelog == 'true'
-            id: changelog
-            shell: bash
-            run: |
-                PREVIOUS_TAG=$(git describe --tags --abbrev=0 --always $(git rev-list --tags --skip=1 --max-count=1) 2>/dev/null || echo "")
-                CURRENT_DATE=$(date -u +"%Y-%m-%d")
-                
-                ADDED=""
-                CHANGED=""
-                FIXED=""
-                REMOVED=""
-                SECURITY=""
-                
-                if [ -z "$PREVIOUS_TAG" ]; then
-                  COMMITS=$(git log --pretty=format:"%s|%h" --reverse)
-                else
-                  COMMITS=$(git log --pretty=format:"%s|%h" ${PREVIOUS_TAG}..HEAD --reverse)
-                fi
-                
-                while IFS= read -r line; do
-                  COMMIT_MSG=$(echo "$line" | cut -d'|' -f1)
-                  COMMIT_HASH=$(echo "$line" | cut -d'|' -f2)
-                
-                  if [[ "$COMMIT_MSG" =~ ^(Add|Create|Implement|Feature) ]]; then
-                    ADDED="$ADDED\n* $COMMIT_MSG ([${COMMIT_HASH}](https://github.com/${{ github.repository }}/commit/${COMMIT_HASH}))"
-                  elif [[ "$COMMIT_MSG" =~ ^(Update|Improve|Enhance|Refactor|Change) ]]; then
-                    CHANGED="$CHANGED\n* $COMMIT_MSG ([${COMMIT_HASH}](https://github.com/${{ github.repository }}/commit/${COMMIT_HASH}))"
-                  elif [[ "$COMMIT_MSG" =~ ^(Fix|Bug|Correct|Resolve) ]]; then
-                    FIXED="$FIXED\n* $COMMIT_MSG ([${COMMIT_HASH}](https://github.com/${{ github.repository }}/commit/${COMMIT_HASH}))"
-                  elif [[ "$COMMIT_MSG" =~ ^(Remove|Delete|Deprecate) ]]; then
-                    REMOVED="$REMOVED\n* $COMMIT_MSG ([${COMMIT_HASH}](https://github.com/${{ github.repository }}/commit/${COMMIT_HASH}))"
-                  elif [[ "$COMMIT_MSG" =~ ^(Security) ]]; then
-                    SECURITY="$SECURITY\n* $COMMIT_MSG ([${COMMIT_HASH}](https://github.com/${{ github.repository }}/commit/${COMMIT_HASH}))"
+                # Generate directory tree from package_root
+                if [ -n "${{ inputs.dir-tree-file }}" ]; then
+                  DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
+                  if command -v tree &> /dev/null; then
+                    tree "$OUTER_BUILD_DIR/package_root" > "$DIR_TREE_PATH"
                   else
-                    CHANGED="$CHANGED\n* $COMMIT_MSG ([${COMMIT_HASH}](https://github.com/${{ github.repository }}/commit/${COMMIT_HASH}))"
+                    find "$OUTER_BUILD_DIR/package_root" -type f | sort > "$DIR_TREE_PATH"
                   fi
-                done <<< "$COMMITS"
-                
-                # Create changelog file
-                echo "# Changelog" > ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                echo "All notable changes to this project will be documented in this file." >> ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                echo "The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)," >> ${{ inputs.changelog-file }}
-                echo "and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)." >> ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                echo "## [${{ steps.set_version.outputs.version }}] - $CURRENT_DATE" >> ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                
-                if [ ! -z "$ADDED" ]; then echo "### Added" >> ${{ inputs.changelog-file }}; echo -e "$ADDED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$CHANGED" ]; then echo "### Changed" >> ${{ inputs.changelog-file }}; echo -e "$CHANGED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$FIXED" ]; then echo "### Fixed" >> ${{ inputs.changelog-file }}; echo -e "$FIXED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$REMOVED" ]; then echo "### Removed" >> ${{ inputs.changelog-file }}; echo -e "$REMOVED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$SECURITY" ]; then echo "### Security" >> ${{ inputs.changelog-file }}; echo -e "$SECURITY" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                
-                # Output for release notes
-                CHANGELOG_OUTPUT=""
-                if [ ! -z "$ADDED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Added\n${ADDED}\n\n"; fi
-                if [ ! -z "$CHANGED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Changed\n${CHANGED}\n\n"; fi
-                if [ ! -z "$FIXED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Fixed\n${FIXED}\n\n"; fi
-                if [ ! -z "$REMOVED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Removed\n${REMOVED}\n\n"; fi
-                if [ ! -z "$SECURITY" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Security\n${SECURITY}\n\n"; fi
-                
-                echo "changelog<<EOF" >> $GITHUB_OUTPUT
-                echo -e "$CHANGELOG_OUTPUT" >> $GITHUB_OUTPUT
-                echo "EOF" >> $GITHUB_OUTPUT
+                  echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
+                fi
+
+                # Create ZIP archive from inside package_root so the zip contains only the files at the root
+                cd "$OUTER_BUILD_DIR/package_root"
+                zip -r "$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" .
+                cd -
+
+                echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+
+        -   name: Upload to GitHub Artifacts
+            if: inputs.upload-artifact == 'true'
+            uses: actions/upload-artifact@v4
+            with:
+                name: ${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}
+                path: |
+                  ${{ steps.create_package.outputs.package_path }}
+                  ${{ steps.create_package.outputs.dir_tree_path }}
+                retention-days: 90
+                if-no-files-found: warn
