--- a/action.yml
+++ b/action.yml
@@ -277,72 +277,26 @@ runs:
                 echo "creation_date=$CREATION_DATE" >> $GITHUB_OUTPUT
                 echo "current_year=$CURRENT_YEAR" >> $GITHUB_OUTPUT
 
-        -   name: Create package
-            id: create_package
+        -   name: Update Joomla update server XML
+            if: inputs.update-joomla-server == 'true'
             shell: bash
             run: |
                 EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
-                EXTENSION_XML="${{ steps.extension_details.outputs.extension_xml }}"
                 VERSION="${{ steps.set_version.outputs.version }}"
+                UPDATES_XML="${{ inputs.updates-xml-file }}"
+                if [ -f "$UPDATES_XML" ]; then
+                  cp "$UPDATES_XML" "${UPDATES_XML}.bak"
 
-                if [ -n "$RUNNER_TEMP" ]; then
-                  OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
+                  DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${VERSION}/${EXTENSION_NAME}_${VERSION}.zip"
+
+                  # Update version
+                  sed -i "s|<version>.*</version>|<version>${VERSION}</version>|g" "$UPDATES_XML"
+
+                  # Update download URL
+                  sed -i "s|<downloadurl>.*</downloadurl>|<downloadurl>$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
+
+                  echo "Updated $UPDATES_XML file with new version and download URL"
+                  cat "$UPDATES_XML"
                 else
-                  OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
+                  echo "::warning::${{ inputs.updates-xml-file }} file not found in repository"
                 fi
-                rm -rf "$OUTER_BUILD_DIR"
-                mkdir -p "$OUTER_BUILD_DIR/package_root"
-
-                EXCLUDES=(
-                  --exclude='.git/'
-                  --exclude='.github/'
-                  --exclude='.DS_Store'
-                  --exclude='Thumbs.db'
-                  --exclude='node_modules/'
-                  --exclude='.packagerignore'
-                  --exclude='build/'
-                  --exclude='package/'
-                  --exclude='.gitignore'
-                  --exclude='*.bak'
-                  --exclude='*.zip'
-                )
-                if [ -f .packagerignore ]; then
-                  while IFS= read -r line; do
-                    [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
-                    EXCLUDES+=(--exclude="$line")
-                  done < .packagerignore
-                fi
-
-                rsync -a ./ "$OUTER_BUILD_DIR/package_root/" "${EXCLUDES[@]}"
-
-                echo "External build/package directory contents:"
-                ls -la "$OUTER_BUILD_DIR/package_root"
-
-                # Generate directory tree from package_root
-                if [ -n "${{ inputs.dir-tree-file }}" ]; then
-                  DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
-                  if command -v tree &> /dev/null; then
-                    tree "$OUTER_BUILD_DIR/package_root" > "$DIR_TREE_PATH"
-                  else
-                    find "$OUTER_BUILD_DIR/package_root" -type f | sort > "$DIR_TREE_PATH"
-                  fi
-                  echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
-                fi
-
-                # Create ZIP archive from inside package_root so the zip contains only the files at the root
-                cd "$OUTER_BUILD_DIR/package_root"
-                zip -r "$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" .
-                cd -
-
-                echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
-
-        -   name: Upload to GitHub Artifacts
-            if: inputs.upload-artifact == 'true'
-            uses: actions/upload-artifact@v4
-            with:
-                name: ${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}
-                path: |
-                  ${{ steps.create_package.outputs.package_path }}
-                  ${{ steps.create_package.outputs.dir_tree_path }}
-                retention-days: 90
-                if-no-files-found: warn
