--- a/action.yml
+++ b/action.yml
@@ -291,7 +291,7 @@ runs:
                   OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
                 rm -rf "$OUTER_BUILD_DIR"
-                mkdir -p "$OUTER_BUILD_DIR/package_root"
+                mkdir -p "$OUTER_BUILD_DIR"
 
                 EXCLUDES=(
                   --exclude='.git/'
@@ -313,22 +313,22 @@ runs:
                   done < .packagerignore
                 fi
 
-                rsync -a ./ "$OUTER_BUILD_DIR/package_root/" "${EXCLUDES[@]}"
+                rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
 
-                # Generate directory tree from package_root
+                # Generate directory tree from OUTER_BUILD_DIR
                 if [ -n "${{ inputs.dir-tree-file }}" ]; then
                   DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
                   if command -v tree &> /dev/null; then
-                    tree "$OUTER_BUILD_DIR/package_root" > "$DIR_TREE_PATH"
+                    tree "$OUTER_BUILD_DIR" > "$DIR_TREE_PATH"
                   else
-                    find "$OUTER_BUILD_DIR/package_root" -type f | sort > "$DIR_TREE_PATH"
+                    find "$OUTER_BUILD_DIR" -type f | sort > "$DIR_TREE_PATH"
                   fi
                   echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
                 fi
 
-                # Create ZIP archive from inside package_root so the zip contains only the files at the root
-                cd "$OUTER_BUILD_DIR/package_root"
-                zip -r "$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" .
+                # Create ZIP archive from inside OUTER_BUILD_DIR so the zip contains only the files at the root
+                cd "$OUTER_BUILD_DIR"
+                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
                 cd -
 
                 echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
