--- a/action.yml
+++ b/action.yml
@@ -282,17 +282,17 @@ runs:
             shell: bash
             run: |
                 EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
-                EXTENSION_XML="${{ steps.extension_details.outputs.extension_xml }}"
                 VERSION="${{ steps.set_version.outputs.version }}"
-
+                
                 if [ -n "$RUNNER_TEMP" ]; then
                   OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
                 else
                   OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
-                rm -rf "$OUTER_BUILD_DIR"
-                mkdir -p "$OUTER_BUILD_DIR"
-
+                FILES_DIR=\"$OUTER_BUILD_DIR/files_to_zip\"
+                rm -rf \"$OUTER_BUILD_DIR\"
+                mkdir -p \"$FILES_DIR\"
+                
                 EXCLUDES=(
                   --exclude='.git/'
                   --exclude='.github/'
@@ -308,30 +308,30 @@ runs:
                 )
                 if [ -f .packagerignore ]; then
                   while IFS= read -r line; do
-                    [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
-                    EXCLUDES+=(--exclude="$line")
+                    [[ \"$line\" =~ ^#.*$ || -z \"$line\" ]] && continue
+                    EXCLUDES+=(--exclude=\"$line\")
                   done < .packagerignore
                 fi
-
-                rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
-
-                # Generate directory tree from OUTER_BUILD_DIR
-                if [ -n "${{ inputs.dir-tree-file }}" ]; then
-                  DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
+                
+                rsync -a ./ \"$FILES_DIR/\" \"${EXCLUDES[@]}\"
+                
+                # Generate directory tree from FILES_DIR
+                if [ -n \"${{ inputs.dir-tree-file }}\" ]; then
+                  DIR_TREE_PATH=\"$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}\"
                   if command -v tree &> /dev/null; then
-                    tree "$OUTER_BUILD_DIR" > "$DIR_TREE_PATH"
+                    tree \"$FILES_DIR\" > \"$DIR_TREE_PATH\"
                   else
-                    find "$OUTER_BUILD_DIR" -type f | sort > "$DIR_TREE_PATH"
+                    find \"$FILES_DIR\" -type f | sort > \"$DIR_TREE_PATH\"
                   fi
-                  echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
+                  echo \"dir_tree_path=$DIR_TREE_PATH\" >> $GITHUB_OUTPUT
                 fi
-
-                # Create ZIP archive from inside OUTER_BUILD_DIR so the zip contains only the files at the root
-                cd "$OUTER_BUILD_DIR"
-                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
+                
+                # Create ZIP archive from inside FILES_DIR so the zip contains only the files at the root
+                cd \"$FILES_DIR\"
+                zip -r \"$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip\" .
                 cd -
-
-                echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+                
+                echo \"package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip\" >> $GITHUB_OUTPUT
 
         -   name: Upload extension package zip
             if: inputs.upload-artifact == 'true'
@@ -350,7 +350,6 @@ runs:
                 path: ${{ steps.create_package.outputs.dir_tree_path }}
                 retention-days: 90
                 if-no-files-found: warn
-
         -   name: Update Joomla update server XML
             if: inputs.update-joomla-server == 'true'
             shell: bash
