--- a/action.yml
+++ b/action.yml
@@ -289,9 +289,8 @@ runs:
                 else
                   OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
-                FILES_DIR="$OUTER_BUILD_DIR/files_to_zip"
                 rm -rf "$OUTER_BUILD_DIR"
-                mkdir -p "$FILES_DIR"
+                mkdir -p "$OUTER_BUILD_DIR"
                 
                 EXCLUDES=(
                   --exclude='.git/'
@@ -304,7 +303,7 @@ runs:
                   --exclude='package/'
                   --exclude='.gitignore'
                   --exclude='*.bak'
-                  --exclude='*.zip'
+                  --exclude='**/*.zip'
                 )
                 if [ -f .packagerignore ]; then
                   while IFS= read -r line; do
@@ -313,22 +312,22 @@ runs:
                   done < .packagerignore
                 fi
                 
-                rsync -a ./ "$FILES_DIR/" "${EXCLUDES[@]}"
+                rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
                 
-                # Generate directory tree from FILES_DIR
+                # Generate directory tree from OUTER_BUILD_DIR
                 if [ -n "${{ inputs.dir-tree-file }}" ]; then
                   DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
                   if command -v tree &> /dev/null; then
-                    tree "$FILES_DIR" > "$DIR_TREE_PATH"
+                    tree "$OUTER_BUILD_DIR" > "$DIR_TREE_PATH"
                   else
-                    find "$FILES_DIR" -type f | sort > "$DIR_TREE_PATH"
+                    find "$OUTER_BUILD_DIR" -type f | sort > "$DIR_TREE_PATH"
                   fi
                   echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
                 fi
                 
-                # Create ZIP archive from inside FILES_DIR so the zip contains only the files at the root
-                cd "$FILES_DIR"
-                zip -r "$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" .
+                # Create ZIP archive from inside OUTER_BUILD_DIR so the zip contains only the files at the root
+                cd "$OUTER_BUILD_DIR"
+                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
                 cd -
                 
                 echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
