Simplify package creation by removing separate files directory structure

--- a/action.yml
+++ b/action.yml
@@ -289,9 +289,9 @@ runs:
                 else
                   OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
-                FILES_DIR="$OUTER_BUILD_DIR/files_to_zip"
+                FILES_DIR="$OUTER_BUILD_DIR/"
                 rm -rf "$OUTER_BUILD_DIR"
-                mkdir -p "$FILES_DIR"
+                mkdir -p "$OUTER_BUILD_DIR"
                 
                 EXCLUDES=(
                   --exclude='.git/'
