--- a/action.yml
+++ b/action.yml
@@ -283,16 +283,15 @@ runs:
             run: |
                 EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
                 VERSION="${{ steps.set_version.outputs.version }}"
-                
+
                 if [ -n "$RUNNER_TEMP" ]; then
                   OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
                 else
                   OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
-                FILES_DIR="$OUTER_BUILD_DIR/"
                 rm -rf "$OUTER_BUILD_DIR"
                 mkdir -p "$OUTER_BUILD_DIR"
-                
+
                 EXCLUDES=(
                   --exclude='.git/'
                   --exclude='.github/'
@@ -312,26 +311,20 @@ runs:
                     EXCLUDES+=(--exclude="$line")
                   done < .packagerignore
                 fi
-                
-                rsync -a ./ "$FILES_DIR/" "${EXCLUDES[@]}"
-                
-                # Generate directory tree from FILES_DIR
-                if [ -n "${{ inputs.dir-tree-file }}" ]; then
-                  DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
-                  if command -v tree &> /dev/null; then
-                    tree "$FILES_DIR" > "$DIR_TREE_PATH"
-                  else
-                    find "$FILES_DIR" -type f | sort > "$DIR_TREE_PATH"
-                  fi
-                  echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
-                fi
-                
-                # Create ZIP archive from inside FILES_DIR so the zip contains only the files at the root
-                cd "$FILES_DIR"
+
+                rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
+
+                echo "Contents of OUTER_BUILD_DIR before zipping:"
+                ls -l "$OUTER_BUILD_DIR"
+
+                cd "$OUTER_BUILD_DIR"
                 zip -r "../${EXTENSION_NAME}_${VERSION}.zip" .
                 cd -
-                
-                echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+
+                echo "Contents of OUTER_BUILD_DIR after zipping:"
+                ls -l "$(dirname "$OUTER_BUILD_DIR")"
+
+                echo "package_path=$(dirname "$OUTER_BUILD_DIR")/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
 
         -   name: Upload extension package zip
             if: inputs.upload-artifact == 'true'
