Fix ZIP archive creation to use correct output directory path

--- a/action.yml
+++ b/action.yml
@@ -318,13 +318,13 @@ runs:
                 ls -l "$OUTER_BUILD_DIR"
 
                 cd "$OUTER_BUILD_DIR"
-                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" .
+                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
                 cd -
 
                 echo "Contents of OUTER_BUILD_DIR after zipping:"
-                ls -l "$(dirname "$OUTER_BUILD_DIR")"
+                ls -l "$OUTER_BUILD_DIR"
 
-                echo "package_path=$(dirname "$OUTER_BUILD_DIR")/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+                echo "package_path=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
 
         -   name: Upload extension package zip
             if: inputs.upload-artifact == 'true'
