--- a/action.yml
+++ b/action.yml
@@ -314,8 +314,15 @@ runs:
 
                 rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
 
-                echo "Contents of OUTER_BUILD_DIR before upload:"
+                echo "Contents of OUTER_BUILD_DIR before zipping/upload:"
                 ls -l "$OUTER_BUILD_DIR"
+
+                # Create the extension zip for both artifact and release
+                cd "$OUTER_BUILD_DIR"
+                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
+                cd -
+                echo "package_zip=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
+
                 # Generate directory tree from OUTER_BUILD_DIR
                 if [ -n "${{ inputs.dir-tree-file }}" ]; then
                   DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
@@ -326,8 +333,6 @@ runs:
                   fi
                   echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
                 fi
-
-                echo "package_path=$OUTER_BUILD_DIR" >> $GITHUB_OUTPUT
 
         -   name: Upload extension package zip
             if: inputs.upload-artifact == 'true'
