--- a/action.yml
+++ b/action.yml
@@ -334,6 +334,24 @@ runs:
                   echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
                 fi
 
+        -   name: Generate filtered changelog
+            shell: bash
+            run: |
+                PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+                CURR_TAG="${{ steps.set_version.outputs.version }}"
+                CHANGELOG_FILE="${{ inputs.changelog-file }}"
+                {
+                  echo "## [${CURR_TAG}] - $(date +'%Y-%m-%d')"
+                  echo ""
+                  git log --pretty=format:"*   %s (%h)" ${PREV_TAG}..HEAD | grep -v "Update version to \\[skip ci\\]"
+                  echo ""
+                } > temp_changelog.md
+                # Prepend to existing changelog if it exists
+                if [ -f "$CHANGELOG_FILE" ]; then
+                  tail -n +2 "$CHANGELOG_FILE" >> temp_changelog.md
+                fi
+                mv temp_changelog.md "$CHANGELOG_FILE"
+
         -   name: Upload extension package zip
             if: inputs.upload-artifact == 'true'
             uses: actions/upload-artifact@v4
