Consolidate version generation logic and remove duplicate update server XML step

--- a/action.yml
+++ b/action.yml
@@ -255,15 +255,13 @@ runs:
                 else
                   # Use automatic date-based versioning
                   BASE_VERSION=$(date +'%Y.%m.%d')
-                
                   git fetch --tags
-                
                   if git rev-parse "$BASE_VERSION" >/dev/null 2>&1; then
                     MATCHING_TAGS=$(git tag -l "$BASE_VERSION.*")
                     if [ -z "$MATCHING_TAGS" ]; then
                       VERSION="${BASE_VERSION}.1"
                     else
-                      HIGHEST_SUBVERSION=$(echo "$MATCHING_TAGS" | sed "s/^$BASE_VERSION\.//" | sort -n | tail -1)
+                      HIGHEST_SUBVERSION=$(echo "$MATCHING_TAGS" | sed "s/^$BASE_VERSION\\.//" | sort -n | tail -1)
                       NEXT_SUBVERSION=$((HIGHEST_SUBVERSION + 1))
                       VERSION="${BASE_VERSION}.$NEXT_SUBVERSION"
                     fi
